update google site verification and analytics adding protocol

--- a/themes/mb-design/templates/partials/th3dcard.html.twig
+++ b/themes/mb-design/templates/partials/th3dcard.html.twig
@@ -7,7 +7,7 @@
 
 {% block head %}
     <meta charset="utf-8" />
-    {% if sitelocation is same as('https://martinbagshaw.co.uk')%}
+    {% if sitelocation is same as('https://www.martinbagshaw.co.uk')%}
     <!-- google site verification code -->
     <meta name="google-site-verification" content="Wsaohs6tMaC7wOWnBdismDY9xuKDF08OjH69CFr3XVY" />
     {% endif %}
@@ -66,7 +66,7 @@
     {{ assets.js('bottom') }}
 {% endblock %}
 
-{% if sitelocation is same as('https://martinbagshaw.co.uk')%}
+{% if sitelocation is same as('https://www.martinbagshaw.co.uk')%}
 <!-- google analytics -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
